--- a/spec/fixtures/_config.yml
+++ b/spec/fixtures/_config.yml
@@ -4,7 +4,7 @@ variables:
 collections:
   source:
     output: true
-    permalink: :path
+    permalink: '/output/%{latest_version}/:dirpath'
 
 defaults:
   -
